--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,8 +1,10 @@
 @media (min-width: 1920px) {
     body {
+        min-width: 1920px;
         max-width: 1920px;
         margin: auto;
     }
+
 }
 
 @media (max-width: 580px) {
