--- a/css/standard.css
+++ b/css/standard.css
@@ -1,7 +1,15 @@
-body {
+html, body {
+    min-height: 100vh;
     margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+body {
     box-sizing: border-box;
     font-family: 'PressStart2P';
     overflow-y: scroll;
     overflow-x: hidden;
+    flex: 1;
 }
