--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Header */
 .header-container {
   display: flex;
   justify-content: space-between;
@@ -381,11 +380,14 @@
   align-items: center;
   height: 100px;
   background-color: #c6c6c6;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
+  width: 100vw;
   box-sizing: border-box;
+  margin-top: auto;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
 }
 
 .footer-container a {
