--- a/style.css
+++ b/style.css
@@ -380,14 +380,9 @@
   align-items: center;
   height: 100px;
   background-color: #c6c6c6;
-  width: 100vw;
+  width: 100%;
   box-sizing: border-box;
   margin-top: auto;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
 }
 
 .footer-container a {
@@ -409,4 +404,16 @@
   width: 40px;
   height: 40px;
   animation: spin 1s linear infinite;
+}
+
+.no-results-message {
+  text-align: center;
+  padding: 20px;
+  font-size: 14px;
+  color: #666;
+  background-color: #f8f8f8;
+  border-radius: 10px;
+  border: 2px solid #a1a1a1;
+  margin: 20px auto;
+  max-width: 600px;
 }
