--- a/css/responsive.css
+++ b/css/responsive.css
@@ -93,6 +93,10 @@
     height: 70px;
   }
 
+.close-btn-container{
+  margin-top: 25px;
+}
+  
   .close-btn {
     width: 32px;
     height: 32px;
@@ -176,7 +180,7 @@
   .close-btn-container {
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
+    margin-top: 45px;
   }
 
   .poke-card {
